--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           aws-region: eu-central-1
 
       - name: Sync files to S3
-        run: aws s3 sync dist/ s3://stashohulia.dev --delete
+        run: aws s3 sync dist/ s3://my-portfolio-site-storage --delete
 
       - name: Invalidate CloudFront cache
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_ID }} --paths "/*"
